--- a/estilos/adoteaqui.css
+++ b/estilos/adoteaqui.css
@@ -12,10 +12,13 @@
   text-align: center;
   font-family: monospace; 
   border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .logo h1:hover {
-  font-size: 20px;
+  transform: scale(1.2);
   color: rgb(99, 99, 102);
 }
 
@@ -53,6 +56,21 @@
   display: flex;
   justify-content: space-around;
   padding: 20px;
+  flex-wrap: wrap;
+}
+
+.imagem img {
+  border-radius: 4px;
+}
+
+.imagem > div + div {
+  margin-left: 10px;
+}
+
+.imagem > div {
+  margin-bottom: 24px;
+  flex: 1;
+  text-align: center;
 }
 
 .foto {
@@ -73,5 +91,23 @@
   margin-top: 10px;
   background-color:#EDEDED;
   color: rgb(12, 12, 12);
+  padding: 16px 0;
+  border-radius: 10px;
 }
 
+@media only screen and (max-width: 700px) {
+  .logo {
+    display: none;
+  }
+
+  #menu ul {
+    flex-direction: column;
+    text-align: center;
+    padding: 0;
+  }
+
+  #menu ul li a { 
+    display: block;
+    width: 100%; 
+  }
+}
