--- a/estilos/adoteaqui.css
+++ b/estilos/adoteaqui.css
@@ -29,6 +29,7 @@
   margin: 2px;
   border-radius: 10px;
   list-style:none; 
+  text-transform: uppercase;
 }
 
 #menu ul li { 
@@ -51,17 +52,28 @@
   color: #EDEDED;
   border-bottom: 3px solid #0c0c0c;
 }
-
+/*adicionei background e border radius */
 .imagem {
   display: flex;
   justify-content: space-around;
   padding: 20px;
-  flex-wrap: wrap;
+  flex-wrap: wrap;  
 }
 
 .imagem img {
   border-radius: 4px;
   height: 380px;
+  box-sizing: border-box;
+  border: 2px solid rgb(0, 0, 0);
+  border-radius: 10px;
+}
+
+.imagem img:hover{
+  border-color: #EDEDED;;
+}
+
+.imagem img:active {
+  border-color: rgb(166, 163, 211);
 }
 
 .imagem > div + div {
@@ -85,15 +97,16 @@
   margin: 0;
 }
 
-.rodape {
-  display: flex;
-  justify-content: center;
+footer {
   text-align: center;
-  margin-top: 10px;
   background-color:#EDEDED;
-  color: rgb(12, 12, 12);
-  padding: 16px 0;
+  padding: 5px 0;
   border-radius: 10px;
+}
+
+.copyright {
+  color: rgb(12, 12, 12);
+  font-size: 12px;
 }
 
 @media only screen and (max-width: 700px) {
