--- a/estilos/adoteaqui.css
+++ b/estilos/adoteaqui.css
@@ -3,14 +3,16 @@
   flex-direction: column;
   justify-content: space-between;
   font-size: 12px;
+  text-transform: uppercase;
   margin: 2px;
+
 }
 
 .logo {
-  background-color:#EDEDED;
+  background-color: #EDEDED;
   color: rgb(12, 12, 12);
   text-align: center;
-  font-family: monospace; 
+  font-family: monospace;
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -23,41 +25,42 @@
 }
 
 #menu ul {
-  background-color:#EDEDED;
+  background-color: #EDEDED;
   justify-content: center;
   display: flex;
   margin: 2px;
   border-radius: 10px;
-  list-style:none; 
+  list-style: none;
   text-transform: uppercase;
 }
 
-#menu ul li { 
-  display: inline; 
+#menu ul li {
+  display: inline;
 }
 
 #menu ul li a {
-  background-color:#EDEDED;
+  background-color: #EDEDED;
   color: #333;
-  display: inline-block;  
+  display: inline-block;
   border-radius: 10px;
-  border-bottom:3px solid #EDEDED;
+  border-bottom: 3px solid #EDEDED;
   text-decoration: none;
   padding: 10px;
   font-size: 15px;
 }
 
 #menu ul li a:hover {
-  background-color:#080808;
+  background-color: #080808;
   color: #EDEDED;
   border-bottom: 3px solid #0c0c0c;
 }
+
 /*adicionei background e border radius */
 .imagem {
   display: flex;
   justify-content: space-around;
   padding: 20px;
-  flex-wrap: wrap;  
+  flex-wrap: wrap;
 }
 
 .imagem img {
@@ -68,19 +71,20 @@
   border-radius: 10px;
 }
 
-.imagem img:hover{
-  border-color: #EDEDED;;
+.imagem img:hover {
+  border-color: #EDEDED;
+  ;
 }
 
 .imagem img:active {
   border-color: rgb(166, 163, 211);
 }
 
-.imagem > div + div {
+.imagem>div+div {
   margin-left: 10px;
 }
 
-.imagem > div {
+.imagem>div {
   margin-bottom: 24px;
   flex: 1;
   text-align: center;
@@ -91,7 +95,8 @@
   justify-content: space-around;
 }
 
-.titulo, .descricao {
+.titulo,
+.descricao {
   text-align: center;
   font-size: 15px;
   margin: 0;
@@ -99,7 +104,7 @@
 
 footer {
   text-align: center;
-  background-color:#EDEDED;
+  background-color: #EDEDED;
   padding: 5px 0;
   border-radius: 10px;
 }
@@ -120,8 +125,8 @@ footer {
     padding: 0;
   }
 
-  #menu ul li a { 
+  #menu ul li a {
     display: block;
-    width: 100%; 
+    width: 100%;
   }
 }
