--- a/estilos/adoteaqui.css
+++ b/estilos/adoteaqui.css
@@ -1,37 +1,36 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  font-size: 12px;
-  text-transform: uppercase;
-  margin: 2px;
+@import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 
+*,
+html,
+body {
+  margin: 0;
+  padding: 0;
+  background: whitesmoke;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
-.logo {
-  background-color: #EDEDED;
-  color: rgb(12, 12, 12);
-  text-align: center;
-  font-family: monospace;
-  border-radius: 10px;
+header {
+  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
   display: flex;
   align-items: center;
+  text-align: center;
   justify-content: center;
-}
-
-.logo h1:hover {
-  transform: scale(1.2);
-  color: rgb(99, 99, 102);
+  margin-bottom: 13.5px;
+  height: 60px;
+  font-weight: bold;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
 }
 
 #menu ul {
-  background-color: #EDEDED;
   justify-content: center;
   display: flex;
-  margin: 2px;
-  border-radius: 10px;
+  border-radius: 5px;
   list-style: none;
   text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
 }
 
 #menu ul li {
@@ -39,20 +38,20 @@
 }
 
 #menu ul li a {
-  background-color: #EDEDED;
-  color: #333;
+  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
   display: inline-block;
-  border-radius: 10px;
-  border-bottom: 3px solid #EDEDED;
   text-decoration: none;
+  border-radius: 10px;
+  border-bottom: 3px solid #000000;
+  color: rgb(0, 0, 0);
   padding: 10px;
+  margin-left: 5px;
   font-size: 15px;
 }
 
 #menu ul li a:hover {
-  background-color: #080808;
-  color: #EDEDED;
-  border-bottom: 3px solid #0c0c0c;
+  color: #dad4d4;
+  border-bottom: 3px solid #dfdfdf;
 }
 
 /*adicionei background e border radius */
@@ -67,24 +66,23 @@
   border-radius: 4px;
   height: 380px;
   box-sizing: border-box;
-  border: 2px solid rgb(0, 0, 0);
+  border: 2.5px solid #000000;
   border-radius: 10px;
 }
 
 .imagem img:hover {
-  border-color: #EDEDED;
-  ;
+  border-color: #ededed;
 }
 
 .imagem img:active {
-  border-color: rgb(166, 163, 211);
+  border-color: rgb(13, 156, 212);
 }
 
-.imagem>div+div {
+.imagem > div + div {
   margin-left: 10px;
 }
 
-.imagem>div {
+.imagem > div {
   margin-bottom: 24px;
   flex: 1;
   text-align: center;
@@ -99,18 +97,16 @@
 .descricao {
   text-align: center;
   font-size: 15px;
-  margin: 0;
 }
 
 footer {
+  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
+  padding: 4px 0;
   text-align: center;
-  background-color: #EDEDED;
-  padding: 5px 0;
-  border-radius: 10px;
 }
 
 .copyright {
-  color: rgb(12, 12, 12);
+  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
   font-size: 12px;
 }
 
@@ -122,7 +118,6 @@ footer {
   #menu ul {
     flex-direction: column;
     text-align: center;
-    padding: 0;
   }
 
   #menu ul li a {
