--- a/estilos/adoteaqui.css
+++ b/estilos/adoteaqui.css
@@ -5,14 +5,18 @@ html,
 body {
   margin: 0;
   padding: 0;
-  background: whitesmoke;
+  background: rgb(193, 199, 216);
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
 }
 
 header {
-  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
+  background-image: linear-gradient(
+    -90deg,
+    rgb(186, 194, 216) 0%,
+    #62639e 100%
+  );
   display: flex;
   align-items: center;
   text-align: center;
@@ -38,11 +42,11 @@ header {
 }
 
 #menu ul li a {
-  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
+  background-image: linear-gradient(-90deg, #adaee4 0%, #62639e 100%);
   display: inline-block;
   text-decoration: none;
-  border-radius: 10px;
-  border-bottom: 3px solid #000000;
+  border-radius: 5px;
+  border-bottom: 2px solid #000000;
   color: rgb(0, 0, 0);
   padding: 10px;
   margin-left: 5px;
@@ -51,7 +55,7 @@ header {
 
 #menu ul li a:hover {
   color: #dad4d4;
-  border-bottom: 3px solid #dfdfdf;
+  border-bottom: 2px solid #dfdfdf;
 }
 
 /*adicionei background e border radius */
@@ -71,11 +75,11 @@ header {
 }
 
 .imagem img:hover {
-  border-color: #ededed;
+  border-color: #62639e;
 }
 
 .imagem img:active {
-  border-color: rgb(13, 156, 212);
+  border-color: rgb(0, 0, 0);
 }
 
 .imagem > div + div {
@@ -96,17 +100,26 @@ header {
 .titulo,
 .descricao {
   text-align: center;
-  font-size: 15px;
+  font-size: 13.5px;
+  font-family: "Montserrat", sans-serif;
 }
 
 footer {
-  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
-  padding: 4px 0;
+  background-image: linear-gradient(
+    -90deg,
+    rgb(186, 194, 216) 0%,
+    #62639e 100%
+  );
+  padding: 5px 0;
   text-align: center;
 }
 
 .copyright {
-  background-image: linear-gradient(-90deg, #adaee4 0%, #030458 100%);
+  background-image: linear-gradient(
+    -90deg,
+    rgb(186, 194, 216) 0%,
+    #62639e 100%
+  );
   font-size: 12px;
 }
 
