--- a/estilos/adoteaqui.css
+++ b/estilos/adoteaqui.css
@@ -42,11 +42,13 @@ header {
 }
 
 #menu ul li a {
-  background-image: linear-gradient(-90deg, #adaee4 0%, #62639e 100%);
+  background-image: linear-gradient(-90deg,
+   #adaee4 0%,
+   #62639e 100%);
   display: inline-block;
   text-decoration: none;
   border-radius: 5px;
-  border-bottom: 2px solid #000000;
+  border-bottom: 2px solid rgb(0, 0, 0);
   color: rgb(0, 0, 0);
   padding: 10px;
   margin-left: 5px;
@@ -54,7 +56,7 @@ header {
 }
 
 #menu ul li a:hover {
-  color: #dad4d4;
+  color: #dfdfdf;
   border-bottom: 2px solid #dfdfdf;
 }
 
